--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,98 @@
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1>staff digital</h1>
+    <header>
+        <div class="contenedor-full header-wrap">
+            <div class="contenedor">
+                <div><img src="images/logo.png"></div>
+                <nav>
+                    <ul>
+                        <li><a href="#"></a>Nosotros</li>
+                        <li><a href="#"></a>Servicios</li>
+                        <li><a href="#"></a>Blog</li>
+                        <li><a href="#"></a>Blog</li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+        <div class="contenedor-full wrap-banner">
+            <!--<img src="images/banner.jpg">-->
+            <div class="contenedor">
+                <div class="content-banner">
+                    <span>Nuestro objetivo:</span>
+                    <h1>
+                        incrementar el valor
+                        de tu negocio
+                    </h1>
+                    <hr>
+                    <p>
+                        En SVC entendemos que los negocios extraordinarios se crean en las líneas que están por encima de la utilidad operativa dentro del estado de resultados, es decir, en el espacio donde la estrategia y la consultoría enfocada en el valor cobran relevancia
+                    </p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section>
+        <div class="contenedor">
+            <div class="wrap-metodologia">
+                <div class="content-metodologia">
+                    <h2>Nuestra metodología</h2>
+                    <p>A través de la elaboración de un modelo financiero, analizamos junto contigo el modelo de negocio para tu empresa o emprendimiento. Con ello podremos determinar, por ejemplo:</p>
+                    <ul>
+                        <li><span>Los productos o servicios más rentables</span></li>
+                        <li><span>El tamaño de negocio mínimo</span></li>
+                        <li><span>La conveniencia entre comprar o alquilar un activo</span></li>
+                        <li><span>La conveniencia entre desarrollar tareas in-house o tercerizarlas</span></li>
+                        <li><span>El mejor camino para lograr el crecimiento del negocio</span></li>
+                        <li><span>El esquema de financiamiento más conveniente</span></li>
+                        <li><span>Los aspectos contables y de planeamiento tributario a considerar</span></li>
+                    </ul>
+                </div>
+                <img src="images/laptop.png">
+            </div> <!--fin .wrap-metodologia-->
+
+            <div class="wrap-consultores">
+                <h2>Te ofrecemos un equipo senior de consultores</h2>
+                <p>con amplia experiencia en finanzas corporativas y estrategia,
+                    dedicados de forma exclusiva. </p>
+
+                <div class="carrusel-consultores">
+                    <div>
+                        <img src="images/ejecutiva.jpg" alt="">
+                        <strong>Rodrigo Cruz B.</strong>
+                        <small>Gerente general</small>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip sequat.</p>
+                    </div>
+                    <div>
+                        <img src="images/ejecutiva2.jpg" alt="">
+                        <strong>Rodrigo Cruz B.</strong>
+                        <small>Gerente general</small>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip sequat.</p>
+                    </div>
+                    <div>
+                        <img src="images/ejecutivo3.jpg" alt="">
+                        <strong>Rodrigo Cruz B.</strong>
+                        <small>Gerente general</small>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip sequat.</p>
+                    </div>
+                    <div>
+                        <img src="images/ejecutivo1.jpg" alt="">
+                        <strong>Rodrigo Cruz B.</strong>
+                        <small>Gerente general</small>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip sequat.</p>
+                    </div>
+                    <div>
+                        <img src="images/ejecutivo2.jpg" alt="">
+                        <strong>Rodrigo Cruz B.</strong>
+                        <small>Gerente general</small>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip sequat.</p>
+                    </div>
+                </div>
+            </div> <!--fin .wrap-consultores-->
+        </div>
+    </section>
 
 </body>
 </html>
