--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Rubik:400,500" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
         <div class="contenedor-full header-wrap">
             <div class="contenedor">
-                <div><img src="images/logo.png"></div>
+                <div class="set-logo"><img src="images/logo.png"></div>
                 <nav>
                     <ul>
                         <li><a href="#"></a>Nosotros</li>
@@ -24,28 +25,29 @@
                 </nav>
             </div>
         </div>
+    </header>
 
-        <div class="contenedor-full wrap-banner">
+    <section class="section-banner">
+        <div class="contenedor-full banner-wrap">
             <!--<img src="images/banner.jpg">-->
             <div class="contenedor">
                 <div class="content-banner">
-                    <span>Nuestro objetivo:</span>
+                    <h2>Nuestro objetivo:</h2>
                     <h1>
                         incrementar el valor
                         de tu negocio
                     </h1>
-                    <hr>
                     <p>
                         En SVC entendemos que los negocios extraordinarios se crean en las líneas que están por encima de la utilidad operativa dentro del estado de resultados, es decir, en el espacio donde la estrategia y la consultoría enfocada en el valor cobran relevancia
                     </p>
                 </div>
             </div>
         </div>
-    </header>
+    </section>
 
-    <section>
+    <section class="section-contenido">
         <div class="contenedor">
-            <div class="wrap-metodologia">
+            <div class="metodologia-wrap">
                 <div class="content-metodologia">
                     <h2>Nuestra metodología</h2>
                     <p>A través de la elaboración de un modelo financiero, analizamos junto contigo el modelo de negocio para tu empresa o emprendimiento. Con ello podremos determinar, por ejemplo:</p>
@@ -60,9 +62,9 @@
                     </ul>
                 </div>
                 <img src="images/laptop.png">
-            </div> <!--fin .wrap-metodologia-->
+            </div> <!--fin .metodologia-wrap -->
 
-            <div class="wrap-consultores">
+            <div class="consultores-wrap">
                 <h2>Te ofrecemos un equipo senior de consultores</h2>
                 <p>con amplia experiencia en finanzas corporativas y estrategia,
                     dedicados de forma exclusiva. </p>
@@ -99,7 +101,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip sequat.</p>
                     </div>
                 </div>
-            </div> <!--fin .wrap-consultores-->
+            </div> <!-- fin .consultores-wrap -->
         </div>
     </section>
 
