Maquetacion del header

--- a/app/index.html
+++ b/app/index.html
@@ -13,14 +13,14 @@
 <body>
     <header>
         <div class="contenedor-full header-wrap">
-            <div class="contenedor">
+            <div class="contenedor header-set">
                 <div class="set-logo"><img src="images/logo.png"></div>
-                <nav>
+                <nav class="navs-wrap" >
                     <ul>
-                        <li><a href="#"></a>Nosotros</li>
-                        <li><a href="#"></a>Servicios</li>
-                        <li><a href="#"></a>Blog</li>
-                        <li><a href="#"></a>Blog</li>
+                        <li><a href="#">Nosotros</a></li>
+                        <li><a href="#">Servicios</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
@@ -30,18 +30,18 @@
     <section class="section-banner">
         <div class="contenedor-full banner-wrap">
             <!--<img src="images/banner.jpg">-->
-            <div class="contenedor">
-                <div class="content-banner">
-                    <h2>Nuestro objetivo:</h2>
-                    <h1>
-                        incrementar el valor
-                        de tu negocio
-                    </h1>
-                    <p>
-                        En SVC entendemos que los negocios extraordinarios se crean en las líneas que están por encima de la utilidad operativa dentro del estado de resultados, es decir, en el espacio donde la estrategia y la consultoría enfocada en el valor cobran relevancia
-                    </p>
-                </div>
-            </div>
+            <!--<div class="contenedor">-->
+                <!--<div class="content-banner">-->
+                    <!--<h2>Nuestro objetivo:</h2>-->
+                    <!--<h1>-->
+                        <!--incrementar el valor-->
+                        <!--de tu negocio-->
+                    <!--</h1>-->
+                    <!--<p>-->
+                        <!--En SVC entendemos que los negocios extraordinarios se crean en las líneas que están por encima de la utilidad operativa dentro del estado de resultados, es decir, en el espacio donde la estrategia y la consultoría enfocada en el valor cobran relevancia-->
+                    <!--</p>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
     </section>
 
