Maquetacion de banner 50%

--- a/app/index.html
+++ b/app/index.html
@@ -30,25 +30,25 @@
     <section class="section-banner">
         <div class="contenedor-full banner-wrap">
             <!--<img src="images/banner.jpg">-->
-            <!--<div class="contenedor">-->
-                <!--<div class="content-banner">-->
-                    <!--<h2>Nuestro objetivo:</h2>-->
-                    <!--<h1>-->
-                        <!--incrementar el valor-->
-                        <!--de tu negocio-->
-                    <!--</h1>-->
-                    <!--<p>-->
-                        <!--En SVC entendemos que los negocios extraordinarios se crean en las líneas que están por encima de la utilidad operativa dentro del estado de resultados, es decir, en el espacio donde la estrategia y la consultoría enfocada en el valor cobran relevancia-->
-                    <!--</p>-->
-                <!--</div>-->
-            <!--</div>-->
+            <div class="contenedor banner-set">
+                <div class="banner-content">
+                    <h2>Nuestro objetivo:</h2>
+                    <h1>
+                        incrementar el valor
+                        de tu negocio
+                    </h1>
+                    <p>
+                        En SVC entendemos que los negocios extraordinarios se crean en las líneas que están por encima de la utilidad operativa dentro del estado de resultados, es decir, en el espacio donde la estrategia y la consultoría enfocada en el valor cobran relevancia
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
     <section class="section-contenido">
         <div class="contenedor">
             <div class="metodologia-wrap">
-                <div class="content-metodologia">
+                <div class="metodologia-content">
                     <h2>Nuestra metodología</h2>
                     <p>A través de la elaboración de un modelo financiero, analizamos junto contigo el modelo de negocio para tu empresa o emprendimiento. Con ello podremos determinar, por ejemplo:</p>
                     <ul>
