Maquetacion de contenido 30%

--- a/app/index.html
+++ b/app/index.html
@@ -29,10 +29,9 @@
 
     <section class="section-banner">
         <div class="contenedor-full banner-wrap">
-            <!--<img src="images/banner.jpg">-->
             <div class="contenedor banner-set">
                 <div class="banner-content">
-                    <h2>Nuestro objetivo:</h2>
+                    <h2 class="objetivo">Nuestro objetivo:</h2>
                     <h1>
                         incrementar el valor
                         de tu negocio
@@ -46,7 +45,7 @@
     </section>
 
     <section class="section-contenido">
-        <div class="contenedor">
+        <div class="contenedor contenido">
             <div class="metodologia-wrap">
                 <div class="metodologia-content">
                     <h2>Nuestra metodología</h2>
@@ -61,7 +60,10 @@
                         <li><span>Los aspectos contables y de planeamiento tributario a considerar</span></li>
                     </ul>
                 </div>
-                <img src="images/laptop.png">
+                <figure>
+                    <img class="img-laptop" src="images/laptop.png">
+                </figure>
+
             </div> <!--fin .metodologia-wrap -->
 
             <div class="consultores-wrap">
