--- a/app/index.html
+++ b/app/index.html
@@ -63,14 +63,14 @@
                 <figure>
                     <img class="img-laptop" src="images/laptop.png">
                 </figure>
-
             </div> <!--fin .metodologia-wrap -->
 
             <div class="consultores-wrap">
-                <h2>Te ofrecemos un equipo senior de consultores</h2>
-                <p>con amplia experiencia en finanzas corporativas y estrategia,
-                    dedicados de forma exclusiva. </p>
-
+                <div class="consultores-content">
+                    <h2>Te ofrecemos un equipo senior de consultores</h2>
+                    <p>con amplia experiencia en finanzas corporativas y estrategia,<br>
+                        dedicados de forma exclusiva. </p>
+                </div>
                 <div class="carrusel-consultores">
                     <div>
                         <img src="images/ejecutiva.jpg" alt="">
