--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
                         <p>con amplia experiencia en finanzas corporativas y estrategia,<br>
                             dedicados de forma exclusiva. </p>
                     </div>
-                    <div class="carrusel autoplay">
+                    <div class="carrusel responsive">
                         <div class="set-ejecutivo">
                             <img src="images/ejecutiva.jpg" alt="">
                             <strong>Rodrigo Cruz B.</strong>
